pages with content

--- a/prasadam_website/contact_us.html
+++ b/prasadam_website/contact_us.html
@@ -16,6 +16,11 @@ home_padding {
     font-family: "Myriad-Pro";
 }
 
+@font-face {
+   font-family: myFirstFont;
+   src: url(fonts/MyriadPro-Regular.otf);
+}
+
 </style>
 <title>Brown Field Template</title>
 <meta name="keywords" content="" />
