--- a/prasadam_website/home.html
+++ b/prasadam_website/home.html
@@ -6,6 +6,19 @@
 	Template 2047 Brown Field
 	by www.tooplate.com 
 -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+        var home_header = $("#home_header");
+        home_header.mouseenter(function(){
+        // alert("hello")
+         // home_header.animate({height: '150px', opacity: '0.4'}, "slow");
+         // home_header.animate({width: '150px', opacity: '0.8'}, "slow");
+        /*home_header.animate({height: '100px', opacity: '0.4'}, "slow");*/
+        // home_header.animate({width: '100px', opacity: '0.8'}, "slow");
+    });
+}); 
+</script>
 <style type="text/css">
 home_padding {
     padding-left: 125px;
@@ -15,8 +28,9 @@ home_padding {
     width:100%;
     font-family: "Myriad-Pro";
 }
-
 </style>
+
+
 <title>Brown Field Template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
@@ -27,15 +41,15 @@ home_padding {
         </div>
 
         <div class="row">
-        <a href="people.html"><img src="images/people_header.png" id = "people_header"/><a href="we.html"><img src="images/we_header.png" id="we_header"  /></a><img src="images/prasadam_header.png" id="karma_header"  />
+        <a href="people.html"><img src="images/people_header.png" id = "people_header"/><a href="we.html"><img src="images/we_header.png" id="we_header"  /></a><a href="karma_tips.html"><img src="images/prasadam_header.png" id="karma_header"  /></a>
         </div>
 
         <div class="row">
-        <a href="shopping.html"><img src="images/shopping_header.png" id = "shopping_header"/></a><a href="contact_us.html"><img src="images/contactus_header.png" id="contactus_header"/></a><img src="images/prasadam_header.png" id="peace_header"  />
+        <a href="shopping.html"><img src="images/shopping_header.png" id = "shopping_header"/></a><a href="contact_us.html"><img src="images/contactus_header.png" id="contactus_header"/></a><a href="peace.html"><img src="images/prasadam_header.png" id="peace_header"  /></a>
         </div>
 
         <div class="row">
-        <img src="images/facebook_header.png" id = "facebook_header"/><img src="images/whiteback.png" id="twitter_header"  /><a href="recycle.html"><img src="images/recycle_header.png" id="recycle_header"  /></a><img src="images/prasadam_header.png" id="roaring_header"  />
+        <img src="images/facebook_header.png" id = "facebook_header"/><img src="images/whiteback.png" id="twitter_header"  /><a href="recycle.html"><img src="images/recycle_header.png" id="recycle_header"  /></a><a href="roaring20s.html"><img src="images/prasadam_header.png" id="roaring_header"  /></a>
         </div>
         
 
