--- a/prasadam_website/people.html
+++ b/prasadam_website/people.html
@@ -17,6 +17,7 @@
 }
 
 .white_canvas{
+    position: :relative;
     margin-left: 125px;
     margin-top: 0px;
 }
@@ -46,6 +47,28 @@
     margin-top: 10px;
 }
 
+.container{
+    /*margin-left: 500px;*/
+    width: 430px;
+    height: 500px;
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 500px;
+    font-family: myFirstFont;
+    text-align: justify;
+    line-height: 30px;
+}
+
+@font-face {
+   font-family: myFirstFont;
+   src: url(fonts/MyriadPro-Regular.otf);
+}
+
+div {
+   font-family: myFirstFont;
+   font-size: 15px;
+}
+
 </style>
 <title>Brown Field Template</title>
 <meta name="keywords" content="" />
@@ -56,12 +79,15 @@
         <a href="home.html"><img src="images/home_header.png" id = "home_header"/></a><img src="images/prasadam_header.png" id="prasadam_header"  />
         </div>
         <div class ="white_canvas">
+            <div class ="container">
+             We launched Karma Tips , a little over a year ago. We are a team of three people Vedobroto Roy , Chetana Roy and Archna Prasad who run Prasadam Paper Industries. Prasadam in our language, is a holy offering from god. I am a writer, by profession. My wife Chetana, is an artist, sculptor and a nature lover. Archna Prasad, is a technology wiz and an acute trouble-shooter (and a cute one too!).We are all Indians , by birth. The idea for Karma Tups came after a briefing session at a Big Tobacco company (client of the advertising agency I worked for) in Bangladesh. Though it is one of the most popular brand of cigarettes in the world, we were surprised to find that none of our clients smoked even though they worked for a Big Tobacco.They explained, that apart from being the most addictive substance on the planet , it was also an environmental menace.
+         </div>
         <img class="ved-circle" src="images/ved.png">
         <img class="chetana-circle" src="images/chetana.png">
         <img class="putti-circle" src="images/putti.png">
         <img src = "images/whiteback.jpg" id= "white_canvas"/>
         </div>
-        <p class ="white_canvas">Hey putti , chetana , ved , Akka familys is going to move to bangalore</p>
+       
 
 
 
