--- a/prasadam_website/contact_us.html
+++ b/prasadam_website/contact_us.html
@@ -16,9 +16,58 @@ home_padding {
     font-family: "Myriad-Pro";
 }
 
+
+.white_canvas{
+    position: :relative;
+    margin-left: 125px;
+    margin-top: 0px;
+}
+
+.putti-circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: 100px;
+    margin-top: 290px;
+}
+.chetana-circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: 250px;
+    margin-top: 150px;
+}
+.ved-circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: 100px;
+    margin-top: 10px;
+}
+
+.container{
+    /*margin-left: 500px;*/
+    width: 430px;
+    height: 500px;
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 500px;
+    font-family: myFirstFont;
+    text-align: justify;
+    line-height: 30px;
+}
+
 @font-face {
    font-family: myFirstFont;
    src: url(fonts/MyriadPro-Regular.otf);
+}
+
+div {
+   font-family: myFirstFont;
+   font-size: 15px;
 }
 
 </style>
