--- a/prasadam_website/home.html
+++ b/prasadam_website/home.html
@@ -12,8 +12,15 @@ $(document).ready(function(){
         var home_header = $("#home_header");
         home_header.mouseenter(function(){
         // alert("hello")
-         // home_header.animate({height: '150px', opacity: '0.4'}, "slow");
-         // home_header.animate({width: '150px', opacity: '0.8'}, "slow");
+         // home_header.animate({height: '200px', opacity: '0.4'}, "fast");
+         // home_header.animate({width: '200px', opacity: '0.8'}, "fast");
+        /*home_header.animate({height: '100px', opacity: '0.4'}, "slow");*/
+        // home_header.animate({width: '100px', opacity: '0.8'}, "slow");
+    });
+         home_header.mouseleave(function(){
+        // alert("hello")
+         // home_header.animate({height: '180px', opacity: '1'}, "fast");
+         // home_header.animate({width: '180px', opacity: '1'}, "fast");
         /*home_header.animate({height: '100px', opacity: '0.4'}, "slow");*/
         // home_header.animate({width: '100px', opacity: '0.8'}, "slow");
     });
