--- a/prasadam_website/people.html
+++ b/prasadam_website/people.html
@@ -16,12 +16,6 @@
     font-family: "Myriad-Pro";
 }
 
-.white_canvas{
-    position: :relative;
-    margin-left: 125px;
-    margin-top: 0px;
-}
-
 .putti-circle {
     position: absolute;
     border-radius: 50%;
@@ -59,6 +53,11 @@
     line-height: 30px;
 }
 
+.white_canvas{
+    margin-left: 175px;
+    width: 80%;
+    }
+
 @font-face {
    font-family: myFirstFont;
    src: url(fonts/MyriadPro-Regular.otf);
@@ -85,7 +84,7 @@ div {
         <img class="ved-circle" src="images/ved.png">
         <img class="chetana-circle" src="images/chetana.png">
         <img class="putti-circle" src="images/putti.png">
-        <img src = "images/whiteback.jpg" id= "white_canvas"/>
+        <img src = "images/WhiteBack.jpg" class= "white_canvas"/>
         </div>
        
 
