--- a/prasadam_website/roaring20s.html
+++ b/prasadam_website/roaring20s.html
@@ -6,6 +6,7 @@
     Template 2047 Brown Field
     by www.tooplate.com 
 -->
+<link href="css/homepage_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 .home_padding {
     padding-left: 125px;
@@ -14,12 +15,6 @@
     left:0;
     width:100%;
     font-family: "Myriad-Pro";
-}
-
-.white_canvas{
-    position: :relative;
-    margin-left: 125px;
-    margin-top: 0px;
 }
 
 .putti-circle {
