--- a/prasadam_website/we.html
+++ b/prasadam_website/we.html
@@ -18,8 +18,10 @@ home_padding {
 
 
 .white_canvas{
-    position: :relative;
+    /*position: :relative;*/
     margin-left: 125px;
+    width: 700px;
+    height: 800px;
     margin-top: 0px;
 }
 
@@ -97,7 +99,7 @@ div {
         <img class="we2-circle" src="images/we2.jpg">
         <img class="we3-circle" src="images/we3.png">
         <img class="we4-circle" src="images/we4.jpg">
-        <img src = "images/whiteback.jpg" id= "white_canvas"/>
+        <img src = "images/WhiteBack.jpg" id= "white_canvas"/>
         </div>
    <!--      <div class="row">
         <a href="people.html"><img src="images/people_header.png" id = "people_header"/><a href="we.html"><img src="images/we_header.png" id="we_header"  /></a><img src="images/prasadam_header.png" id="karma_header"  />
