fixed template changes

--- a/prasadam_website/contact_us.html
+++ b/prasadam_website/contact_us.html
@@ -2,12 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!-- 
-    Template 2047 Brown Field
-    by www.tooplate.com 
--->
 <style type="text/css">
-home_padding {
+.home_padding {
     padding-left: 125px;
     position: absolute;
     top:200px;
@@ -16,14 +12,15 @@ home_padding {
     font-family: "Myriad-Pro";
 }
 
-
-.white_canvas{
-    position: :relative;
-    margin-left: 125px;
+#white_canvas{
+    position: relative;
+    margin-left: 0px;
     margin-top: 0px;
+    width: 88.4%;
+    height: 500px;
 }
 
-.putti-circle {
+#putti-circle {
     position: absolute;
     border-radius: 50%;
     width: 200px;
@@ -31,7 +28,7 @@ home_padding {
     margin-left: 100px;
     margin-top: 290px;
 }
-.chetana-circle {
+#chetana-circle {
     position: absolute;
     border-radius: 50%;
     width: 200px;
@@ -39,7 +36,7 @@ home_padding {
     margin-left: 250px;
     margin-top: 150px;
 }
-.ved-circle {
+#ved-circle {
     position: absolute;
     border-radius: 50%;
     width: 200px;
@@ -48,7 +45,7 @@ home_padding {
     margin-top: 10px;
 }
 
-.container{
+#container{
     /*margin-left: 500px;*/
     width: 430px;
     height: 500px;
@@ -60,10 +57,10 @@ home_padding {
     line-height: 30px;
 }
 
-@font-face {
+/*@font-face {
    font-family: myFirstFont;
    src: url(fonts/MyriadPro-Regular.otf);
-}
+}*/
 
 div {
    font-family: myFirstFont;
@@ -77,8 +74,7 @@ div {
 <link href="css/homepage_style.css" rel="stylesheet" type="text/css" />
 
         <div class="row">
-        <a href="home.html"><img src="images/home_header.png" id = "home_header"/></a><img src="images/prasadam_header.png" id="prasadam_header"  />
-        <img src = "images/whiteback.jpg" id= "white_canvas"/>
+        <a href="home.html"><img src="images/home_header.png" id = "home_header"/></a><img src="images/prasadam_header.png" id="prasadam_header"  /><img src = "images/WhiteBack.jpg" id = "white_canvas"/>
         </div>
 
    <!--      <div class="row">
