--- a/prasadam_website/recycle.html
+++ b/prasadam_website/recycle.html
@@ -7,7 +7,7 @@
     by www.tooplate.com 
 -->
 <style type="text/css">
-home_padding {
+.home_padding {
     padding-left: 125px;
     position: absolute;
     top:200px;
@@ -53,6 +53,13 @@ home_padding {
     font-family: myFirstFont;
     text-align: justify;
     line-height: 30px;
+}
+
+.white_canvas{
+    margin-left: 0px;
+    margin-top: 0px;
+    width: 88.4%;
+    height: 500px;
 }
 
 @font-face {
