--- a/prasadam_website/roaring20s.html
+++ b/prasadam_website/roaring20s.html
@@ -6,7 +6,6 @@
     Template 2047 Brown Field
     by www.tooplate.com 
 -->
-<link href="css/homepage_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 .home_padding {
     padding-left: 125px;
@@ -62,6 +61,13 @@
 div {
    font-family: myFirstFont;
    font-size: 15px;
+}
+
+.white_canvas{
+    margin-left: 0px;
+    margin-top: 0px;
+    width: 88.4%;
+    height: 500px;
 }
 
 </style>
