--- a/prasadam_website/shopping.html
+++ b/prasadam_website/shopping.html
@@ -7,7 +7,7 @@
     by www.tooplate.com 
 -->
 <style type="text/css">
-home_padding {
+.home_padding {
     padding-left: 125px;
     position: absolute;
     top:200px;
@@ -61,6 +61,13 @@ home_padding {
 div {
    font-family: myFirstFont;
    font-size: 15px;
+}
+
+.white_canvas{
+    margin-left: 0px;
+    margin-top: 0px;
+    width: 88.4%;
+    height: 500px;
 }
 
 </style>
