--- a/prasadam_website/karma_tips.html
+++ b/prasadam_website/karma_tips.html
@@ -66,6 +66,13 @@
     margin-top: 425px;
 }
 
+.white_canvas{
+    margin-left: 0px;
+    margin-top: 0px;
+    width: 88.4%;
+    height: 500px;
+}
+
 .container{
     /*margin-left: 500px;*/
     width: 430px;
