--- a/prasadam_website/peace.html
+++ b/prasadam_website/peace.html
@@ -53,6 +53,13 @@
     line-height: 30px;
 }
 
+.white_canvas{
+    margin-left: 0px;
+    margin-top: 0px;
+    width: 88.4%;
+    height: 500px;
+}
+
 @font-face {
    font-family: myFirstFont;
    src: url(fonts/MyriadPro-Regular.otf);
