--- a/prasadam_website/contact_us.html
+++ b/prasadam_website/contact_us.html
@@ -3,68 +3,53 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
-.home_padding {
+#home_padding{
     padding-left: 125px;
     position: absolute;
     top:200px;
     left:0;
     width:100%;
-    font-family: "Myriad-Pro";
 }
-
-#white_canvas{
-    position: relative;
-    margin-left: 0px;
-    margin-top: 0px;
-    width: 88.4%;
-    height: 500px;
-}
-
-#putti-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
-    margin-top: 290px;
-}
-#chetana-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 250px;
-    margin-top: 150px;
-}
-#ved-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
-    margin-top: 10px;
-}
-
-#container{
-    /*margin-left: 500px;*/
-    width: 430px;
-    height: 500px;
-    position: absolute;
-    margin-top: 10px;
-    margin-left: 500px;
-    font-family: myFirstFont;
-    text-align: justify;
-    line-height: 30px;
-}
-
-/*@font-face {
-   font-family: myFirstFont;
-   src: url(fonts/MyriadPro-Regular.otf);
-}*/
 
 div {
    font-family: myFirstFont;
    font-size: 15px;
+}
+
+#greenFont{
+    font-family: 'myFirstFont';
+    text-align: justify;
+    color: #8AE62E;
+    margin-left: 0px;
+     margin-left: 375px;
+     position: absolute;
+}
+
+#contact_container{
+    /*margin-left: 500px;*/
+    font-family: 'myFirstFont';
+    text-align: justify;
+    line-height: 40px;
+    font-size: 20px;
+    width: 45%;
+    height: 500px;
+    margin-top: 50px;
+    margin-left: 375px;
+     position: absolute;
+}
+
+#send_message{
+ /*margin-left: 500px;*/
+    font-family: 'myFirstFont';
+    text-align: justify;
+    line-height: 40px;
+    font-size: 20px;
+    width: 45%;
+    height: 500px;
+    margin-top: 50px;
+    margin-left: 375px;
+     position: absolute;
+
 }
 
 </style>
@@ -74,24 +59,28 @@ div {
 <link href="css/homepage_style.css" rel="stylesheet" type="text/css" />
 
         <div class="row">
-        <a href="home.html"><img src="images/home_header.png" id = "home_header"/></a><img src="images/prasadam_header.png" id="prasadam_header"  /><img src = "images/WhiteBack.jpg" id = "white_canvas"/>
+        <a href="home.html"><img src="images/home_header.png" id = "home_header"/></a><img src="images/prasadam_header.png" id="prasadam_header"  />
         </div>
-
-   <!--      <div class="row">
-        <a href="people.html"><img src="images/people_header.png" id = "people_header"/><a href="we.html"><img src="images/we_header.png" id="we_header"  /></a><img src="images/prasadam_header.png" id="karma_header"  />
+        <img src="images/WhiteBack.jpg" id = "white_canvas" style="position:absolute">
+        <p id = "greenFont" style = "font-size: 30px;margin-top:50px">Prasadam Industries</p><br>
+        <div id = "contact_container" style="position:absolute">
+            <p>#C-696, Behind Nataraja Theater<br>
+            V.V.Puram, Gowribidanur - 561208<br>
+            Chikkaballapur District, Karnataka State<br>
+            India<br>
         </div>
-
-        <div class="row">
-        <a href="shopping.html"><img src="images/shopping_header.png" id = "shopping_header"/></a><a href="contact_us.html"><img src="images/contactus_header.png" id="contactus_header"/><img src="images/prasadam_header.png" id="peace_header"  />
+            <p id = "greenFont" style = "font-size: 20px;margin-top:230px">karmatips.prasadam@gmail.com<br></p>
+            <div id = "contact_container" style="position:absolute;margin-top:260px">
+            +91 9945303353<br>
+            +91 9892811493<br>
+            +91 9892811492<br>
+            </div>
+            <p>
         </div>
-
-        <div class="row">
-        <img src="images/facebook_header.png" id = "facebook_header"/><img src="images/whiteback.png" id="twitter_header"  /><a href="recycle.html"><img src="images/recycle_header.png" id="recycle_header"  /></a><img src="images/prasadam_header.png" id="roaring_header"  />
+        <div>
+            <input>
+            <textarea rows="4" cols="50">
+            </textarea>
         </div>
-         -->
-
-
-
-
 </head>
 <body>
