--- a/prasadam_website/karma_tips.html
+++ b/prasadam_website/karma_tips.html
@@ -16,126 +16,68 @@
     font-family: "Myriad-Pro";
 }
 
-.karma3-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
-    margin-top: 290px;
-}
-.karma2-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 250px;
-    margin-top: 150px;
-}
-.karma1-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
-    margin-top: 10px;
-}
 
-.karma3-smallcircle {
-    position: absolute;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: 800px;
-    margin-top: 425px;
-}
-.karma2-smallcircle {
-    position: absolute;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: 675px;
-    margin-top: 425px;
-}
-.karma1-smallcircle {
-    position: absolute;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: 550px;
-    margin-top: 425px;
-}
 
-.white_canvas{
-    margin-left: 0px;
-    margin-top: 0px;
-    width: 88.4%;
-    height: 500px;
-}
 
-.container{
-    /*margin-left: 500px;*/
-    width: 430px;
-    height: 500px;
-    position: absolute;
-    margin-top: 10px;
-    margin-left: 500px;
-    font-family: myFirstFont;
-    text-align: justify;
-    line-height: 30px;
-}
-
-@font-face {
-   font-family: myFirstFont;
-   src: url(fonts/MyriadPro-Regular.otf);
-}
-
-div {
-   font-family: myFirstFont;
-   font-size: 15px;
-}
 
 </style>
 <title>Brown Field Template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="css/homepage_style.css" rel="stylesheet" type="text/css" />
-
-        <div class="row">
-        <a href="home.html"><img src="images/home_header.png" id = "home_header"/></a><img src="images/prasadam_header.png" id="prasadam_header"  />
-        </div>
-        <div class ="white_canvas">
-            <div class ="container">
-             We launched Karma Tips , a little over a year ago. We are a team of three people Vedobroto Roy , Chetana Roy and Archna Prasad who run Prasadam Paper Industries. Prasadam in our language, is a holy offering from god. I am a writer, by profession. My wife Chetana, is an artist, sculptor and a nature lover. Archna Prasad, is a technology wiz and an acute trouble-shooter (and a cute one too!).We are all Indians , by birth. The idea for Karma Tups came after a briefing session at a Big Tobacco company (client of the advertising agency I worked for) in Bangladesh. Though it is one of the most popular brand of cigarettes in the world, we were surprised to find that none of our clients smoked even though they worked for a Big Tobacco.They explained, that apart from being the most addictive substance on the planet , it was also an environmental menace.
-         </div>
-         <img class="karma1-smallcircle" src="images/karma1.png">
-        <img class="karma2-smallcircle" src="images/karma2.png">
-        <img class="karma3-smallcircle" src="images/karma3.png">
-
-        <img class="karma1-circle" src="images/karma1.png">
-        <img class="karma2-circle" src="images/karma2.png">
-        <img class="karma3-circle" src="images/karma3.png">
-        <img src = "images/whiteback.jpg" id= "white_canvas"/>
-        </div>
-       
-
-
-
-   <!--      <div class="row">
-        <a href="people.html"><img src="images/people_header.png" id = "people_header"/><a href="we.html"><img src="images/we_header.png" id="we_header"  /></a><img src="images/prasadam_header.png" id="karma_header"  />
-        </div>
-
-        <div class="row">
-        <a href="shopping.html"><img src="images/shopping_header.png" id = "shopping_header"/></a><a href="contact_us.html"><img src="images/contactus_header.png" id="contactus_header"/><img src="images/prasadam_header.png" id="peace_header"  />
-        </div>
-
-        <div class="row">
-        <img src="images/facebook_header.png" id = "facebook_header"/><img src="images/whiteback.png" id="twitter_header"  /><a href="recycle.html"><img src="images/recycle_header.png" id="recycle_header"  /></a><img src="images/prasadam_header.png" id="roaring_header"  />
-        </div>
-         -->
-
-
-
+<link href="css/prasadam_style.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
+<div class="body-wrapper">
+<!-- <div class="dashboard"> -->
+        <ul>    
+                <div class="row1">
+                           <li href="home.html">
+                                <div id="tile">
+                                <div id="dummy"></div>
+                                <div id="element" style="background-color: white">
+                                    <a href="home.html">Home</a>
+                                </div>
+                                </div>
+                           </li> 
+                           <li >
+                                <div id="tile" style="width:76%">
+                                <div id="dummy-title"></div>
+                                <div id="element" style="background-color: #8EC63F">
+                                    <p>Karma</p>
+                                </div>
+                                </div>
+                           </li>
+                </div>
+                <div id="white_canvas1" style="background-color: white;">
+                <div id="dummy-white"></div>
+                <div id="element">
+                    <div class ="padding-row1">
+                    <img class="large1-circle" style="position:absolute" src="images/karma1.png">
+                    </div>
+                    <div class="padding-row2">
+                    <img class="large2-circle" style="position:absolute" src="images/karma2.png">
+                    </div>
+                    <div class="padding-row3">
+                    <img class="large3-circle" style="position:absolute" src="images/karma3.png">
+                    </div>
+                </div>
+                </div>
+                    <div id="white_canvas2" style="background-color: white;">
+                        <div id="dummy-white"></div>
+                        <div id="element">
+                             <p class = "textarea">
+                            Prasadam Industries, proposes to manufacture eco-friendly, 100% bio-degradable, recycled paper for the manufacture of bags and food boxes for fast food outlets. We have undestaken this project for cheiefly two reasons. To discourage the use of regular plastic bags and other environmentally hazardous products. To help people plant trees every time they use Prasadam bags.Our paper is handmade and manufactured using recycled paper,wood refuse and fruit/vegetable pulp (Lawn grass,wild carrots,Thyme,Tulsi etc) added to it.
+                            </p>
+                    <div style ="padding-right:200px">                   
+                    <img class="small1-circle" style="position:relative" src="images/karma1.png">
+                    <img class="small1-circle" style="position:relative" src="images/karma2.png">
+                    <img class="small1-circle" style="position:relative" src="images/karma3.png">
+                    </div>
+
+                </div>
+            </div>
+        </ul>
+        
+</div>
+</body>
