prasadam latest change

--- a/prasadam_website/home.html
+++ b/prasadam_website/home.html
@@ -17,7 +17,13 @@
                 <!-- <div class="row1"> -->
                            <li href="home.html">
                                 <div class = "box">
-                                    <a href="home.html">Home</a>
+                                    <img src="images/icons/Home.png" alt="Home" style="width:304px;height:228px;">
+                                    <a href="home.html">
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p></p>
+                                    </span>
+                                    Home</a>
                                 </div>
                            </li> 
                             <li href="home.html">
@@ -27,7 +33,12 @@
                            </li> 
                             <li href="shopping.html">
                                 <div class = "box">
-                                    <a href="shopping.html">Shopping</a>
+                                    <a href="shopping.html">Shopping
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p>Shopping</p>
+                                    </span>
+                                    </a>
                                 </div>
                            </li> 
                             <li href="home.html">
@@ -37,17 +48,32 @@
                            </li> 
                             <li href="home.html">
                                 <div class = "box">
-                                    <a href="people.html">People</a>
+                                    <a href="people.html">
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p>People</p>
+                                    </span>
+                                    </a>
                                 </div>
                            </li> 
                             <li href="home.html">
                                 <div class = "box">
-                                    <a href="we.html">We</a>
+                                    <a href="we.html">
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p>We</p>
+                                    </span>
+                                    </a>
                                 </div>
                            </li> 
                             <li href="home.html">
                                 <div class = "box">
-                                    <a href="recycle.html">Recycle</a>
+                                    <a href="recycle.html">
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p>Recycle</p>
+                                    </span>
+                                    </a>
                                 </div>
                            </li> 
                             <li href="home.html">
@@ -57,22 +83,37 @@
                            </li> 
                             <li href="home.html">
                                 <div class = "box ">
-                                    <a href="home.html">Facebook</a>
+                                    <a href="home.html">
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p>Facebook</p>
+                                    </span>
+                                    </a>
                                 </div>
                            </li> 
                             <li href="home.html">
                                 <div class = "box">
-                                    <a href="home.html">Twitter</a>
+                                    <a href="home.html">
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p>Twitter</p>
+                                    </span>
+                                    </a>
                                 </div>
                            </li> 
                             <li href="home.html">
                                 <div class = "box">
-                                    <a href="contact_us.html">ContactUs</a>
+                                    <a href="contact_us.html">
+                                    <span class="caption fade-caption">
+                                        <h3></h3>
+                                        <p>Contact us</p>
+                                    </span>
+                                    </a>
                                 </div>
                            </li> 
                              <li href="home.html">
                                 <div class = "box karma_peace">
-                                    <a href="home.html">Roaring 20S</a>
+                                    <a href="roaring20s.html">Roaring 20S</a>
                                 </div>
                            </li> 
                           
