--- a/prasadam_website/peace.html
+++ b/prasadam_website/peace.html
@@ -36,7 +36,7 @@
                                          <img class="large2-circle" src="images/peace2.png">
                                     </div>
                                     <div class="padding-row3">
-                                        <img class="large3-circle" src="images/peace3.png">
+                                        <img class="large3-circle" src="images/karma3.png">
                                     </div> 
                                     
                              </div>
