--- a/prasadam_website/shopping.html
+++ b/prasadam_website/shopping.html
@@ -7,95 +7,40 @@
     by www.tooplate.com 
 -->
 <style type="text/css">
-.home_padding {
-    padding-left: 125px;
-    position: absolute;
-    top:200px;
-    left:0;
-    width:100%;
-    font-family: "Myriad-Pro";
-}
-
-.putti-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
-    margin-top: 290px;
-}
-.chetana-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 250px;
-    margin-top: 150px;
-}
-.ved-circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
-    margin-top: 10px;
-}
-
-.container{
-    /*margin-left: 500px;*/
-    width: 430px;
-    height: 500px;
-    position: absolute;
-    margin-top: 10px;
-    margin-left: 500px;
-    font-family: myFirstFont;
-    text-align: justify;
-    line-height: 30px;
-}
-
-@font-face {
-   font-family: myFirstFont;
-   src: url(fonts/MyriadPro-Regular.otf);
-}
-
-div {
-   font-family: myFirstFont;
-   font-size: 15px;
-}
-
-.white_canvas{
-    margin-left: 0px;
-    margin-top: 0px;
-    width: 88.4%;
-    height: 500px;
-}
 
 </style>
 <title>Brown Field Template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="css/homepage_style.css" rel="stylesheet" type="text/css" />
-
-        <div class="row">
-        <a href="home.html"><img src="images/home_header.png" id = "home_header"/></a><img src="images/prasadam_header.png" id="prasadam_header"  />
-        <img src = "images/whiteback.jpg" id= "white_canvas"/>
-        </div>
-
-   <!--      <div class="row">
-        <a href="people.html"><img src="images/people_header.png" id = "people_header"/><a href="we.html"><img src="images/we_header.png" id="we_header"  /></a><img src="images/prasadam_header.png" id="karma_header"  />
-        </div>
-
-        <div class="row">
-        <a href="shopping.html"><img src="images/shopping_header.png" id = "shopping_header"/></a><a href="contact_us.html"><img src="images/contactus_header.png" id="contactus_header"/><img src="images/prasadam_header.png" id="peace_header"  />
-        </div>
-
-        <div class="row">
-        <img src="images/facebook_header.png" id = "facebook_header"/><img src="images/whiteback.png" id="twitter_header"  /><a href="recycle.html"><img src="images/recycle_header.png" id="recycle_header"  /></a><img src="images/prasadam_header.png" id="roaring_header"  />
-        </div>
-         -->
-
-
-
+<link href="css/prasadam_style.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
+<div class="mainwrapper">
+<!-- <div class="dashboard"> -->
+                                <div class = "box">
+                                    <a href="home.html">Home</a>
+                                </div>
+                                <div class = "box prasadam_tile">
+                                    <a href="home.html">Prasadam Title</a>
+                                </div>
+                                <div id="white_canvas1">
+                                  <p class="textarea"> 
+                                       Shopping KART
+                                    </p>
+                                    <div class="padding-row1">
+                                         <img class="large1-circle"  src="images/roaring1.png">
+                                    </div>
+                                    <div class="padding-row2">
+                                         <img class="large2-circle" src="images/roaring2.png">
+                                    </div>
+                                    <div class="padding-row3">
+                                        <img class="large3-circle" src="images/roaring3.png">
+                                    </div> 
+                                    
+                             </div>
+</div>
+</body>
+
+
+       
